# udp2amqp-rs

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  env.sh  recipe.json
src/: main.rs
util/: amqp_consumer.py  docker-compose.yml  requirements.txt  udp_producer.py
